# ServoArm1

./: README.md  kbot_arm.urdf  package.xml
kbot_arm/kbot_arm/: CMakeLists.txt
kbot_arm/kbot_arm/urdf/: kbot.urdf  kbot.urdf.xacro  kbot_arm.urdf.xacro  kbot_arm.xacro  (+2 more)
kbot_description/: CMakeLists.txt  package.xml
kbot_description/config/: joint_names_move_urdf.yaml
kbot_description/launch/: display.launch  gazebo.launch
kbot_description/urdf/: ikfast61_kbot_arm.cpp  kbot.urdf  kbot.urdf.xacro  kbot_arm.xacro  kbot_gripper.xacro
kbot_ikfast_plugin/: CMakeLists.txt  package.xml
kbot_interact/: CMakeLists.txt  package.xml
kbot_interact/kbot_arduino/: kbot_arduino.ino
kbot_interact/parse_and_publish/: parse_and_publish.cpp
kbot_interact/src/: kbot_convert.cpp
kbot_moveit_config/: CMakeLists.txt  package.xml
kbot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kbot_arm.srdf  kinematics.yaml
kbot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
meshes/collision/: base_hull.stl  proximal_arm_pitch_hull.stl
meshes/visual/: base_link.stl  distal_arm_pitch.stl  medial_arm_pitch.stl  medial_arm_roll.stl  proximal_arm_pitch.stl  proximal_arm_roll.stl
urdf/: kbot_arm.urdf.xacro  kbot_gripper.urdf  kbot_gripper.urdf.xacro
(+18 files in other folders)
